# LevelingUpWithTrivia

./: .gitignore  Client.py  DBExample.txt  README.md  TriviaHighLeveldesign.docx  addQuestions.py
ClientSide/LevelingUpWithTrivia/: App.xaml  App.xaml.cs  BoolToVisibilityConverter.cs  LevelingUpWithTrivia.csproj  LevelingUpWithTrivia.sln  MainWindow.xaml  MainWindow.xaml.cs
ClientSide/LevelingUpWithTrivia/Models/: Room.cs  User.cs
ClientSide/LevelingUpWithTrivia/Source/: Communicator.cs
ClientSide/LevelingUpWithTrivia/ViewModels/: CreateMenuViewModel.cs  GameResultsViewModel.cs  GameRoomViewModel.cs  HighScoresViewModel.cs  InfoViewModel.cs  JoinMenuViewModel.cs  JoinRoomViewModel.cs  LogInViewModel.cs  MainMenuViewModel.cs  MainWindowViewModel.cs  SignUpViewModel.cs  (+5 more)
Project1/: CMakeLists.txt  Communicator.cpp  Communicator.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GameRequestHandler.cpp  GameRequestHandler.h  IDataBase.h  IRequestHandler.h  JsonRequestPacketDeserializer.cpp  JsonRequestPacketDeserializer.h  JsonResponsePacketSerializer.cpp  JsonResponsePacketSerializer.h  LoggedUser.cpp  LoggedUser.h  LoginManager.cpp  LoginManager.h  LoginRequestHandler.cpp  LoginRequestHandler.h  MenuRequestHandler.cpp  MenuRequestHandler.h  Project1.vcxproj  Project1.vcxproj.filters  Question.cpp  Question.h  RequestHandlerFactory.cpp  RequestHandlerFactory.h  RequestInfo.h  RequestResult.h  Room.cpp  Room.h  RoomAdminRequestHandler.cpp  RoomAdminRequestHandler.h  RoomData.h  RoomManager.cpp  RoomManager.h  RoomMemberRequestHandler.cpp  RoomMemberRequestHandler.h  (+11 more)
(+69 files in other folders)
